# axc

./: .gitignore  CMakeLists.txt  axcMetaGenerator  axcPreprocess.sh  main.cpp
CMake/: cotire.cmake
catch/src/catch-stamp/: catch-download-.cmake
catch/tmp/: catch-gitclone.cmake
resources/conf/: Example1.axm  Example2.axm
resources/fonts/: Eurostile.axm  Goethe.axm
resources/shaders/simple/: SimpleShader.fragment
resources/shaders/windowing/: MSDF.fragment  Windowing.fragment  Windowing.vertex
src/: Application.cpp  Application.h  ArxEnum.cpp  ArxEnum.h  Combinators.h  Event.cpp  Event.h  GUIEvents.cpp  GUIEvents.h  Noto.cpp  Noto.h  Optional.h  UnitOfMeasure.cpp  UnitOfMeasure.h
src/application/: Application.cpp  Application.h  GameApplication.cpp  GameApplication.h  ResourceManager.cpp  ResourceManager.h
src/axistential/: Physical.cpp  Physical.h
src/axistential/components/: LightComponent.cpp  LightComponent.h
src/axistential/data/: Physical.cpp  Physical.h  WorldData.cpp  WorldData.h
src/axistential/graphics/: Common.cpp  Common.h
src/axistential/testbeds/: LightingTestbed.cpp
src/conf/: AxmParser.cpp  AxmParser.h
src/containers/: ArxMap.h  ArxSet.h  DelegatingHasher.h  Seq.h  Talea.h  TaleaGrid.h
src/core/: ArxFile.cpp  ArxFile.h  ArxString.cpp  ArxString.h  AuxData.h  AxcMetaGenerator.cpp  Format.h  Introspection.cpp  Introspection.h  Introspection.h_generated.cpp  Introspection.h_generated.h  Metrics.h  Moddable.h  Parsing.h  Predef.cpp  Predef.h  Reflect.h  VoxelCoord.cpp  VoxelCoord.h
src/engine/: Engine.cpp  Engine.h  World.cpp  World.h
src/graphics/: AxGL.cpp  AxGL.h  Color.cpp  Color.h  Image.cpp  Image.h  Pov.cpp  Pov.h  Shader.cpp  Shader.h  StandardAttributeProfiles.cpp  StandardAttributeProfiles.h  TextureBlock.cpp  TextureBlock.h  VAO.cpp  VAO.h  VBO.h
src/gui/: BackgroundImageMetrics.h  Font.cpp  Font.h  Font.h_generated.cpp  Font.h_generated.h  LogViewerWidget.cpp  LogViewerWidget.h  TextWidget.cpp  TextWidget.h  Widget.cpp  Widget.h  WindowingSystem.cpp  WindowingSystem.h
src/math/: AccumulatingStats.h  MathHelpers.h  ShapeHelpers.h  Shapes.h  Shapes2d.h  Shapes3d.h
src/resources/shaders/simple/: SimpleShader.fragment
src/resources/shaders/windowing/: Windowing.fragment
src/testbeds/: MSDFTestbed.cpp  MSDFTestbed.h  SimpleTestbed.cpp  SimpleTestbed.h  Testbed.cpp  Testbed.h  WindowingSystemTestbed.cpp  WindowingSystemTestbed.h
test/: ArxMapTests.cpp  AuxDataTests.cpp  CombinatorTests.cpp  EnumTests.cpp  EventTests.cpp  OptionalTests.cpp  PredefTests.cpp  UnitOfMeasureTests.cpp
test/axistential/: LightComponentTests.cpp
test/conf/: AxmParserTest.cpp
test/containers/: TaleaTests.cpp
test/core/: Introspectable.cpp  Introspectable.h  Introspectable.h_generated.cpp  Introspectable.h_generated.h  IntrospectionTests.cpp  ModdableTests.cpp
test/engine/: GameEngineTests.cpp
test/graphics/: ImageTests.cpp  ShaderTests.cpp  TextureBlockTests.cpp  VBOTests.cpp
test/gui/: FontTests.cpp  TextRenderingTest.cpp
